<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fused Location Test</string>
    <string name="location_api_label">Location API</string>
    <string name="location_api_framework">Framework</string>
    <string name="location_api_gms">GMS</string>
    <string name="provider_mode_label">Provider mode</string>
    <string name="provider_mode_fused">Fused</string>
    <string name="provider_mode_gps">GPS</string>
    <string name="provider_mode_network">Network</string>
    <string name="gms_mode_label">GMS request mode</string>
    <string name="gms_mode_high_accuracy">High accuracy</string>
    <string name="gms_mode_balanced">Balanced</string>
    <string name="gms_mode_low_power">Low power</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="lock_status_label">Lock status</string>
    <string name="grant_permission">Grant location permission</string>
    <string name="coordinate_unknown">Waiting for location…</string>
    <string name="lock_status_locked">Locked</string>
    <string name="lock_status_searching">Searching…</string>
    <string name="lock_status_permission_required">Permission required</string>
    <string name="lock_status_provider_unavailable">%1$s provider unavailable</string>
    <string name="lock_status_location_off">Location turned off</string>
</resources>
